# evodo-axum

./: README.md
server/: .gitignore  Cargo.toml  Makefile.toml
server/.sqlx/: query-121ce2b5e21719d47a547c0013fcb2bc25f877f07376e9d818d1447ee3cc4f46.json  query-1b0290b613ea7778e92e90e3eb8d40dd86902f6680597b955640d581df8c5e24.json  query-1b86d57064846d898d7dac18596fbb328cf7f7dcb34e0647514eb7205cb00832.json  query-1d1f6440bd2da23361983e313cee989895aa0a1f4a332df37c7da28a53b75be1.json  query-1ec79b536792f778cc85d720685545bc5cf4f11bec325866c743902ef714b565.json  query-2075026f79630d5197fa3c042333b25bff1efde80c62245d3bac5640e88df75b.json  query-20ea95327f9894992d952a601b1615f96ccbc3fbba6d0b3224017ec0197c1406.json  query-23d45baa47f44cd5dca8ca428d62aa480a94362313b61c4fad4ccf786ba9780d.json  query-2537562a8c8c368434ce2bdf5b18fe4e1863176a820ae877a5feb7f8e7157d82.json  query-26eb64daec5a01ae0b83fe8258f47fbccb6448a1880fb3f1e8c863aba3a79f24.json  query-2765a484096585fa1b151471fc177f05300ff08ec39f8850b61d0ee4e4d5d363.json  query-2e4b2be709b66d9b3e2219d24c7e76e685f86105ac5693b3c3374437fa04fcf8.json  query-321d3b38500cf60f2261fda0a4482f091b2acfcbb198dd2d8f222ac3be1e824e.json  query-33e278bc493db2353f982ae1ae3e66fd3961b21e1c267d9cd11622a8e3d88701.json  query-3505086b87dc005569a5762f0666b4293504f78f89f1b75717bea32456620d23.json  query-39532b52deea484c96428978379c819630355c1794b773286eaf274e12d12f02.json  query-3a1734c6ed4b8ab74db5098d1fb92ad963db763f94da02f33ece77a15fc99e24.json  query-3d6fe017ec281bf2c3ba534b0ae2e45817f062c1dfdc8718cc45337d8a8baf20.json  query-3f9ac6f8a343eec6a3fc7cd5cf8616832b7929f6571be090318645e9fbaa8873.json  query-3fa64d01be8f3a59ba2fe88f05e48cdfa891043d9b35cb79422a522c04ba4988.json  query-4489f3c6b8f2d174b809baefa4371fa401836b01adb66965fd7926a8df9bc224.json  query-471f7c6559d9deba2b370e954bc15a490707ba242b8e7a9706717ad5779ee65b.json  query-48aa399d7b6364ca62af7810f220f63792ff4a87bcb687088687bee0931f7b5f.json  query-4bc634aa591396f5cd71155cc9f614cfd1fd88548841aa4a9cb80ac21b8e7274.json  query-4e8a8c353b8d831e6e0053e5f7f117d25d6e2aff7baf4b32d8b6637846b1d2f5.json  query-58f0c981bf9bd145ebcec7d814c136491a7d29cf0a1472ba56b908cda60f29e6.json  query-5a5c18f1266396150175a9c8b591048cb1e1c52e1ff45c4d01e4ea9e3dfa180e.json  query-5ea60c5e64bf75958a4c2931246fb4fa68bdb4c4f6e3fccc190bb4853ab5a679.json  query-61a332d3fc1632beb6878877cb049964968d612ccc8d1b33649b2e39191cf6c2.json  query-6e4861f3e963c691ca92fb0e5e7d6a1bbba6f6799113cb26dafa577c87c5980e.json  query-738349a028e0d2089f43d0e51fedb9a3b274dc42faf5c1771ef9a2d839d08d94.json  (+27 more)
server/migrations/: 20240126165658_init.sql  (+7 more)
(+183 files in other folders)
