[package]
name = "evodo-axum-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = "0.7"
axum-login = "0.13.0"
axum_garde = "0.17.0"
dotenv = "0.15.0"
garde = "0.17.0"
http = "1.0.0"
openidconnect = "3.4.0"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
strum = { version = "0.25", features = ["derive"] }
thiserror = "1.0.56"
tokio = { version = "1.35", features = ["full"] }
tower-http = { version = "0.5.1", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5.0"
utoipa = { version = "4.2.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
utoipauto = "0.1.5"
uuid = { version = "1.6.1", features = ["v4"] }
